# recommendation_system

./: .gitignore  Dockerfile  docker-compose.yml  main.py  nltk_download.py  pyproject.toml  requirements.txt
.aws/: task-definition.json
.github/workflows/: aws.yml  django-test.yml
recommendation_system/: .env  db.sqlite3  gunicorn.conf.py  manage.py  pytest.ini
recommendation_system/api_auth/: permissions.py  urls.py
recommendation_system/health/: tasks.py  urls.py  views.py
recommendation_system/movies/: admin.py  api.py  middlewares.py  models.py  serializers.py  services.py  signals.py  tasks.py  urls.py
recommendation_system/movies/migrations/: 0001_initial.py  0002_movie_country_movie_extra_data_movie_release_year.py  0003_usermoviepreferences.py
recommendation_system/movies/tests/: factories.py  test_api.py  test_serializer.py  utils.py
recommendation_system/recommendation_system/: asgi.py  base.py  celery.py  dev.py  production.py  production_settings.py  settings.py  test_settings.py  urls.py  wsgi.py
recommendation_system/recommendations/: services.py
