[project]
name = "recommendation-system"
version = "0.1.0"
description = "Project to recommend movies based on users preferences from the database."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.11.1",
    "boto3>=1.43.28",
    "botocore[crt]>=1.43.28",
    "celery[redis]>=5.6.3",
    "django==6.0.5",
    "django-redis>=7.0.0",
    "django-rest-framework==0.1.0",
    "django-storages>=1.14.6",
    "djangorestframework==3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "factory-boy==3.3.3",
    "faker==40.19.1",
    "gunicorn>=26.0.0",
    "iniconfig==2.3.0",
    "jmespath>=1.1.0",
    "nltk>=3.9.4",
    "packaging==26.2",
    "pluggy==1.6.0",
    "psycopg2-binary>=2.9.12",
    "pycurl>=7.46.0",
    "pydantic>=2.13.4",
    "pygments==2.20.0",
    "pytest==9.0.3",
    "pytest-django==4.12.0",
    "scikit-learn>=1.9.0",
    "sqlalchemy>=2.0.50",
    "sqlparse==0.5.5",
    "whitenoise>=6.12.0",
]
